Changes since last release:

VERSION 0.2.xx
DATE xx/xx/2008
11th Alpha Release

NEWS:


NEW: [features/improvements]
+Added Dutch translation (contributed by Gerard Petersen)
+Added Simplified Chinese translation (contributed by heccj)
+Updated Russian translation (contributed by slavOnic)
+Updated Japanese translation
+Highlight Perl POD's as comments

BUG FIXES:
+Fix bug in that would prevent opening files from command line or via drag/drop
+Editra Style Sheets allow fonts with non ascii characters in their names
+Editra Style Sheets parse error on fonts with spaces in their names
+Numerous minor unicode fixes throughout the editor
+Fix memory leak in the LogViewer and Launch

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.65
DATE 02/08/2008
10th Alpha Release

NEWS:
This release includes major improvements to the detection and handling of file
encodings and reporting of related errors when they happen. As part of this
enhancement support for magic encoding comments are now supported in the editor
for specifying an encoding for a document. The comment must be found on either
the first or second line of the file. All popular comment formats are supported,

example1: # -*- encoding: utf-8 *-*
example2: # vim: set fileencoding=latin-1 :
example3: # coding=utf-16

When no encoding is specified the default will be to use utf-8 for encoding text
when possible and falling back to other available system encodings when utf-8
fails.

There is also a new bundled plugin that is distributed with this release. The
plugin is called Launch ant it is the highly requested solution to be able to 
run scripts from within Editra. It currently supports most of the scripting
languages that Editra has support for and provides custom output parsing and
filtering for some languages such as python. The special output handling will
create hotspots on error messages in the output and allow you to instantly